# lbx-utils

./: .gitignore  20250401-145903-progress.yaml  20250401-150138-progress.yaml  20250401-150538-progress.yaml  24mm-bmp-example.lbx  3001.lbx  LBX_TEST_README.md  README.md  README_lbxyml2lbx.md  TASKS.md  change-lbx.py  change_lbx.py  compare_techniques.py  compare_text_dimensions.py  comparison.md  container_test.lbx  convert_csv_to_python.py  create_test_lbx.py  create_test_multiline.py  extract_font_data.py  find_ptouch_fonts.py  generate-part-image.py  generate_all_part_images.py  generate_common_bricks.sh  generate_test_images.sh  label.xml  lbx-create.py  lbx-specification.md  lbx-text-edit.py  lbx24.sh  lbx_text_edit.py  mmtest.lbx  nested_test.lbx  parse-lbx.py  position_test.lbx  process_examples.py  pyproject.toml  pytest.ini  regression_models.md  report-coverage.html  (+24 more)
example-labels/: 3001-12.lbx  3001-18.lbx  3001-24.lbx  3001-24mm.lbx  3001-mod-centered.lbx  3001-mod.lbx  3001.lbx  30182-24.lbx  30182-24mm-actual.lbx  30182-24mm.lbx  30182-open-test.lbx  30182.lbx  blank-12.lbx  blank-9.lbx  test-output.lbx
fonts/: fonts.md
label-templates/: 4-up-smoking.lbx  8mm-vertical.lbx
label_examples/: 3001-9.lbx  3001-mod-14pt.lbx  30182-mod.lbx  blank-18.lbx
label_templates/: 24mm-2-up.lbx
lbx_utils/: __init__.py  __main__.py
schema/: LBX_SCHEMA_REFERENCE.md  lbx-specification.md  lbx_draw_schema.xsd  lbx_image_schema.xsd  lbx_label_schema.xsd  lbx_text_schema.xsd
scripts/: cleanup_tests.sh  extract_fonts.sh  generate_test_images.sh  lbx24.sh  (+3 more)
(+250 files in other folders)
